# FUT_STATS_APP

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  main.py  pyproject.toml  teste.ipynb
.github/workflows/: pipeline.yml
action/: T_HT00.xlsx
gameday/: Jogos_do_Dia_Betfair_2026-02-26.csv  Jogos_do_Dia_Betfair_2026-02-27.csv  Jogos_do_Dia_Betfair_2026-02-28.csv  Jogos_do_Dia_Betfair_2026-03-01.csv  Jogos_do_Dia_Betfair_2026-03-02.csv  Jogos_do_Dia_Betfair_2026-03-03.csv  Jogos_do_Dia_Betfair_2026-03-04.csv  Jogos_do_Dia_Betfair_2026-03-05.csv  Jogos_do_Dia_Betfair_2026-03-06.csv  Jogos_do_Dia_Betfair_2026-03-07.csv  Jogos_do_Dia_Betfair_2026-03-08.csv  Jogos_do_Dia_Betfair_2026-03-09.csv
silver/: Colunas.csv  Dados_Betfair_Exchange_HT00.csv  Join_Dados_Betfair_Exchange_Dia.csv
