[project]
name = "fut-stats-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.54.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]

[tool.ruff.lint]
# Opção A: Manter E731 ativo e deixar corrigir
select = ["E", "W", "F", "I", "UP"]
# Não ignore E731 - ele será corrigido

# Opção B: Ignorar E731 se não quiser que seja corrigido
ignore = ["E731"]

# Opção C: Configurar correção automática específica
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E731"]  # Permite lambda apenas em testes
"legacy/*" = ["E731"]  # Ignora em código legado
